--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jiti": "^2.6.1",
     "playwright": "^1.56.1",
     "prettier": "^3.6.2",
+    "sqlite-electron": "^3.3.5",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.1",
     "vite": "^7.1.10",
