--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "electron-log": "^5.4.3",
     "pinia": "^3.0.3",
     "qsu": "^1.10.2",
