--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,13 @@
     "noImplicitAny": false,
     "allowSyntheticDefaultImports": true,
     "declaration": true,
-    "resolveJsonModule": true,
+    //"resolveJsonModule": true,
     "esModuleInterop": true,
     "sourceMap": true,
     "strict": true,
     "skipLibCheck": true,
+    //"module": "NodeNext",
+    //"moduleResolution": "NodeNext",
     "paths": {
       "@/*": ["./src/*"]
     },
