--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
   "dependencies": {
     "@jamescoyle/vue-icon": "^0.1.2",
     "@mdi/font": "^7.4.47",
+    "better-sqlite3": "^12.4.6",
     "electron-log": "^5.4.3",
+    "node-abi": "^4.24.0",
     "pinia": "^3.0.3",
     "qsu": "^1.10.2",
     "vue": "^3.5.22",
@@ -53,6 +55,7 @@
     "@eslint/js": "^9.37.0",
     "@mdi/js": "^7.4.47",
     "@playwright/test": "^1.56.1",
+    "@types/better-sqlite3": "^7.6.13",
     "@typescript-eslint/parser": "^8.46.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitejs/plugin-vue-jsx": "^5.1.1",
