modified:   package-lock.json 	modified:   package.json 	modified:   src/main/MainRunner.ts 	modified:   src/main/index.ts 	new file:   src/main/pdfBerichtErwin.ts 	modified:   src/preload/index.ts 	modified:   src/renderer/screens/AuswertungScreen.vue

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@mdi/font": "^7.4.47",
     "electron-log": "^5.4.3",
     "node-abi": "^4.24.0",
+    "pdf-lib": "^1.17.1",
     "pinia": "^3.0.3",
     "qsu": "^1.10.2",
     "vue": "^3.5.22",
